Thu May  4 08:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * DAnCE/RepositoryManager/PC_Updater.cpp:
          Fixed compilation error

Wed May  3 22:11:32 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * docs/schema/Basic_Deployment_Data.xsd
        * docs/schema/ccd.xsd
        * docs/schema/cdd.xsd
        * docs/schema/cdp.xsd
        * docs/schema/cid.xsd
        * docs/schema/cpd.xsd
        * docs/schema/iad.xsd
        * docs/schema/pcd.xsd
        * docs/schema/toplevel.xsd

          Schema propagated from the ARMS repo.

Wed May  3 12:53:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * Config_Handlers/Utils/Functors.h:
          Made the FUNC argument just return void, this fixes the errors with this
          template with BCB on my system, hopefully it doesn't break other
          compilers

Tue May  2 03:04:50 UTC 2006  Nishanth Shankaran  <nshankar@dre.vanderbilt.edu>

        * DAnCE/NodeApplication/NodeApplication.cpp:  Removed the code
          snippet that bootstraps the NodeApplication process at a
          specific OS priority.

Wed Apr 26 21:25:26 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>

        * tools/Config_Handlers/Config_Handlers.mpc
        * tools/Config_Handlers/Property_Handler.h
        * tools/Config_Handlers/SatisfierProperty_Handler.h
        * tools/Config_Handlers/Package_Handlers/CAD_Handler.cpp
        * tools/Config_Handlers/Package_Handlers/CID_Handler.cpp
        * tools/Config_Handlers/Package_Handlers/CPD_Handler.cpp
        * tools/Config_Handlers/Package_Handlers/Comp_Intf_Descr_Handler.cpp
        * tools/Config_Handlers/Package_Handlers/IAD_Handler.cpp
        * tools/Config_Handlers/Package_Handlers/Package_Handlers.mpc
        * tools/Config_Handlers/Utils/Functors.h

          Introduced a workaround for a ICE in GCC 4.0.22.

Wed Apr 26 13:10:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tools/Config_Handlers/DP_Handler.cpp: