@@ -1,3 +1,10 @@
+Thu May  4 21:35:01 UTC 2006  William R. Otte  <wotte@dre.vanderbilt.edu>
+
+        * tools/Config_Handlers/ADD_Handler.cpp
+        * tools/Config_Handlers/DP_Handler.cpp
+        
+        Fixed a reverse handler bug. 
+
 Thu May  4 08:33:12 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
 
         * DAnCE/RepositoryManager/PC_Updater.cpp:
